Revert "Fixed image clipping on smaller mobile screens"

--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ body {
 }
 
 .grid-container {
-  width: 100vw;
   max-width: 24rem;
   background-color: var(--white);
 }
